# submarine

./: .gitignore  README.md
controls/joystick/: .gitignore  config.yaml  pyproject.toml  requirements.txt
controls/joystick/src/joystick/: __init__.py  controller.py  main.py  mapping.py  reader.py
controls/joystick/src/joystick/comms/: __init__.py  serial_link.py
esp32_actuators/: platformio.ini
esp32_actuators/src/: main.cpp
esp32_actuators/src/actuators/: actuator_base.h
esp32_actuators/src/communication/: command_parser.cpp  command_parser.h
esp32_actuators/src/config/: device_config.h
esp32_actuators/src/drivers/: hiwonder_servo.cpp  hiwonder_servo.h
esp32_actuators/src/managers/: device_manager.cpp  device_manager.h
rasberry_pi/: README.md  requirements.txt  setup.sh
rasberry_pi/src/actuators/: base.py  esc_motor.py  servo.py
rasberry_pi/src/config/: actuators.yaml
rasberry_pi/src/drivers/: pwm_controller.py
rasberry_pi/src/tests/: test_motors.py
simulations/pid/: REPORT.md  buoyancy.py  main.py
